<resources>
    <string name="app_name">ASCII Camera</string>
    <string name="image_preview">Image Preview</string>
    <string name="filter_item_image">Filter Item Image</string>
    <string name="filter">Filter</string>
    <string name="filters">Filters</string>
    <string name="custom_filters">Custom Filters</string>
    <string name="add">Add</string>
    <string name="close">Close</string>
    <string name="create_new_filter">Create new filter</string>
    <string name="enter_characters">Enter characters</string>
    <string name="sort">Sort</string>
    <string name="foreground_color">Foreground Color</string>
    <string name="background_color">Background Color</string>
    <string name="reverse">Reverse</string>
    <string name="edit">Edit</string>
    <string name="enter_name">Enter Name</string>
    <string name="density">Characters</string>
    <string name="save">Save</string>
    <string name="edit_create">Edit / Create</string>
</resources>