<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/menu_bg_color"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/filter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/create_new_filter"
            android:textColor="@color/menu_fg_color"
            android:textSize="16sp" />

        <Button
            android:id="@+id/closeFilterSheet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/close" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height=".5dp"
        android:background="@color/menu_fg_color"
        android:layout_marginBottom="5dp"/>

    <com.akhilasdeveloper.asciicamera.ui.views.TextCanvasView
        android:id="@+id/filterItemImage"
        android:layout_width="128dp"
        android:layout_height="128dp"
        app:textSize="1sp"
        tools:ignore="SmallSp"
        android:layout_margin="10dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height=".5dp"
        android:background="@color/menu_fg_color"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_characters"
            android:layout_weight="1"
            android:layout_marginEnd="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/charactersInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/sortChars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort"
            android:layout_marginEnd="10dp"/>

        <Button
            android:id="@+id/reversChars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reverse" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height=".5dp"
        android:background="@color/menu_fg_color"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/fgColor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/foreground_color"
            android:textColor="@color/menu_fg_color"
            android:textSize="16sp" />

        <View
            android:id="@+id/fgColorDisp"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:background="@color/white"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height=".5dp"
        android:background="@color/menu_fg_color"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/bgColor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/background_color"
            android:textColor="@color/menu_fg_color"
            android:textSize="16sp" />

        <View
            android:id="@+id/bgColorDisp"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:background="@color/black"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height=".5dp"
        android:background="@color/menu_fg_color"/>

    <Button
        android:id="@+id/add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:layout_margin="10dp"/>

</LinearLayout>